[package]
name = "pallet-mandate"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
