[package]
name = "pallet-nodle-staking"
version = "2.0.1"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>, R.RajeshKumar <rajesh@nodle.co>']
edition = "2018"
description = "nodle's custome staking pallet, use a non inflationary reward system"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-staking = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
pallet-authorship = { version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-io ={ version = "3.0.0" }
sp-core = { version = "3.0.0" }
pallet-timestamp = { version = "3.0.0" }
sp-tracing = { version = "3.0.0" }
substrate-test-utils = { version = "3.0.0" }
frame-benchmarking = { version = "3.0.0" }
rand_chacha = { version = "0.2" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"rand_chacha",
]
