[package]
name = "pallet-nodle-staking"
version = "2.0.6"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>, R.RajeshKumar <rajesh@nodle.co>']
edition = "2018"
description = "nodle's custome staking pallet, use a non inflationary reward system"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.14", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , features = ["historical"], branch = "polkadot-v0.9.3" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.3" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-tracing = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-poa = { default-features = false, path = "../poa" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"frame-benchmarking/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
