[package]
name = "pallet-curveless-staking"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ETeissonniere/pallet-curveless-staking"
description = "An alternative to Substrate's staking pallet with no reward curve and where rewards can be customized"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , features = ["historical"], branch = "polkadot-v0.9.3" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-storage = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-tracing = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"log/std",
	"sp-std/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-balances/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
]
