[package]
name = "parachain-info"
version = "2.0.0"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[features]
default = ["std"]
std = [
  "codec/std",
  "cumulus-primitives-core/std",
  "frame-support/std",
  "frame-system/std",
  "serde",
]

[dependencies]
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
serde = { version = "1.0.119", optional = true, features = ["derive"] }