[package]
name = "pallet-reserve"
version = "2.4.2"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true  }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
