[package]
name = "pallet-root-of-trust"
version = "2.0.0"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
edition = "2018"
description = "This pallet implements a distributed Root Of Trust for Certification Authorities"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-tcr/std",
  "parity-scale-codec/std",
  "serde",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
  "frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-tcr = { default-features = false, path = "../tcr" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.116", optional = true, features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
