[package]
name = "pallet-sponsorship"
version = "2.4.2"
description = "Nodle pallet to allow sponsors to cover fees and reserves needed for a predefined category of calls for their registered users"
authors = ["Nodle Developers <eng@nodle.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
support = { path = "../../support", default-features = false }
log = { version = "0.4.17", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-uniques = { workspace = true }
sp-core = { workspace = true }
sp-state-machine = { workspace = true, default-features = false }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"support/std",
	"sp-io/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
